--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "node --max_old_space_size=8000 node_modules/@vue/cli-service/bin/vue-cli-service.js build",
-    "build:report": "vue-cli-service build --report",
-    "build:report:json": "vue-cli-service build --report-json",
+    "test:unit": "vue-cli-service test:unit --no-cache",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit --no-cache"
+    "build:report": "vue-cli-service build --report",
+    "build:report:json": "vue-cli-service build --report-json"
   },
   "dependencies": {
     "@bcgov/bc-sans": "^1.0.1",
@@ -55,7 +55,7 @@
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-plugin-unit-jest": "^4.5.6",
-    "@vue/cli-service": "^3.12.1",
+    "@vue/cli-service": "^4.5.9",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.30",
     "babel-eslint": "^10.0.1",
@@ -72,7 +72,7 @@
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0",
+    "vuetify-loader": "^1.6.0",
     "webpack-visualizer-plugin": "^0.1.11"
   }
 }
